stay_smart_2017/src/sass/page/_homepage.scss
// =========================================================
// FRONT PAGE PANEL
// =========================================================
.front {
  .page__title {
    @include visually-hidden;
  }
  .gov-front-left {
    padding-top: rem(40px);
    padding-bottom: rem(108px);
    background-color: $neutral_4;
    .panel-pane {
      @include center-column($desktop_column);
    }
  }
  .gov-front-right {
    padding-top: rem(40px);
    padding-bottom: rem(108px);
    background-color: $neutral_4;
    .panel-pane {
      @include center-column($desktop_column);
    }
  }
}

// =========================================================
// INTRODUCTION BEAN
// =========================================================
.bean-basic-content {
  background-color: $sso_neutral_7;
  &>.content {
    @include center-column($desktop_column);
    @include link-colours($primary_1, $secondary_3, $neutral_1);
    padding-top: $default_padding;
    padding-bottom: $default_padding;
    color: $neutral_1;
    @include breakpoint(tablet) {
      padding-top: $default_padding * 2;
      padding-bottom: rem(50px);
    }
    p {
      text-align: center;
      margin-bottom: 0;
      color: $primary_1;
      font-size: rem(16px);
      @include breakpoint(tablet) {
        font-size: rem(24px);
      }
    }
  }
}

.pane-title {
  @include large-title;
}

// =========================================================
// SLIDER
// =========================================================
.view-slideshow {
  .view-content {
    position: relative;
    background-color: #0B3B46;
    &>ul {
      padding: 0;
      margin-bottom: 0;
      @include breakpoint(tablet) {
        height: rem(444px);
      }
      &:not(.owl-loaded) {
        &>li:not(.views-row-first) {
          @include breakpoint(tablet) {
            display: none;
          }
        }
      }
    }
  }
  .view-content li.views-row {
    position: relative;
    list-style: none;
    margin-bottom: 0;
  }
  .field-name-field-slide-image {
    @include clearfix;
    @include breakpoint(tablet) {
      position: absolute;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
    }
    .field-items {
      @include breakpoint(tablet) {
        height: 100%;
      }
    }
    .field-item {
      @include breakpoint(tablet) {
        height: 100%;
      }
    }
    a {
      margin: 0 !important;
      &:after {
        display: none !important;
      }
    }
    img {
      height: rem(225px);
      object-fit: cover;
      float: left;
      @include breakpoint(tablet) {
        width: 100%;
        height: 100%;
      }
    }
  }
  .banner-description-holder {
    color: white;
    padding: rem(30px) $default_padding;
    background-color: $primary_1;
    @include breakpoint(tablet) {
      @include center-column($desktop_column);
      background-color: transparent;
      position: relative;
      padding-top: 0;
      padding-bottom: 0;
    }
    h3 {
      @include link-colours(white, $neutral_4, $neutral_1);
      margin-top: 0;
      font-weight: 400;
      @include breakpoint(tablet) {
        margin-bottom: rem(21px);
        font-size: rem(48px);
        font-weight: 300;
      }
    }
    .field {
      a {
        @include listing-component-button;
      }
    }
  }
  .banner-description-panel {
    @include breakpoint(tablet) {
      position: relative;
      box-sizing: border-box;
      background-color: rgba(0, 0, 0, 0.55);
      padding: rem(45px);
      padding-top: rem(85px);
      max-width: rem(524px);
      min-height: rem(444px);
      color: white;
    }
  }
  .slider-controls {
    position: absolute;
    top: 0;
    padding-top: rem(34px);
    padding-left: rem(37px);
    button {
      color: $white !important;
      border: 0;
      margin: 0;
      display: inline;
      width: rem(36px);
      height: rem(36px);
      overflow: hidden;
      padding: 0;
      vertical-align: top;
      background-color: transparent !important;
      background-repeat: no-repeat;
      background-position: center;
      border-bottom: 1px solid transparent !important;
      border-radius: 0 !important;
      &:hover, &:focus {
        box-shadow: none !important;
        background-color: $secondary_1 !important;
      }
      &.active {
        border-bottom-color: $white !important;
      }
      &.slider-prev {
        @include hide-text;
        background-image: url(../images/svg/slider-prev.svg);
      }
      &.slider-next {
        @include hide-text;
        background-image: url(../images/svg/slider-next.svg);
      }
      &.slider-play {
        @include hide-text;
        background-image: url(../images/svg/slider-pause.svg);
        &.paused {
          background-image: url(../images/svg/slider-play.svg);
        }
      }
    }
    ul {
      padding: 0;
      margin: 0;
      display: inline;
      li {
        display: inline;
      }
    }
  }
}

// =========================================================
// HOMEPAGE BLOGS AND NEWS LISTSING
// =========================================================
.view-home-page-blog-articles, .view-latest-news, .view-whats-new-grid {
  .view-content {
    @include breakpoint(tablet) {
      @include outer-container(100%);
      display: flex;
      flex-wrap: wrap;
    }
    .views-row {
      @include breakpoint(tablet) {
        @include span-columns(6 of 12);
        display: flex; // Fixes a safari issue.
      }
      @include breakpoint(large_tablet) {
        @include span-columns(4 of 12);
        display: flex; // Fixes a safari issue.
      }
      &:nth-child(2n) {
        @include breakpoint(tablet) {
          @include omega();
        }
        @include breakpoint(large_tablet) {
          margin-right: flex-gutter(12);
        }
      }
      &:nth-child(3n) {
        @include breakpoint(large_tablet) {
          @include omega();
        }
      }
      .node {
        @include listing-component-wrapper;
        &.has-thumbnail {
          padding-top: $listing_component_image_height;
          .field-type-image, .field-name-field-feature-image {
            @include listing-component-image;
          }
          h2 {
            margin-top: rem(30px);
          }
        }
      }
      h2 {
        @include listing-component-heading;
        margin-top: 0;
      }
      .field-type-datetime, .submitted {
        @include listing-component-subtext;
      }
      .field-name-body {
        @include listing-component-body;
      }
    }
  }
}

// =========================================================
// WHAT'S NEW LISTING
// =========================================================
.pane-whats-new-grid {
  background-color: #E9E7E3;
  padding-top: rem(55px);
  padding-bottom: rem(43px);
}

.view-whats-new-grid {
  @include center-column($desktop_column);
  .view-header {
    h2 {
      @include large-block-heading;
    }
  }
  .view-content {
    .views-row {
      .node-readmore {
        padding: 0;
        a {
          @include listing-component-button;
        }
      }
    }
  }
  .view-footer {
    text-align: right;
    @include link-colours($sso_neutral_6, $secondary_3, $white);
  }
}

// =========================================================
// HOMEPAGE VIEW ONLINE ALERTS
// =========================================================
.pane-online-alerts {
  @include center-column($desktop_column);
  padding-top: rem(55px);
  padding-bottom: rem(43px);
  .pane-title {
    @include large-block-heading;
  }
}

.view-online-alerts {
  .view-content {
    @include breakpoint(tablet) {
      @include outer-container(100%);
      display: flex;
      flex-wrap: wrap;
    }
    .views-row {
      @include breakpoint(tablet) {
        @include span-columns(4 of 12);
      }
      &:nth-child(2n) {
        @include breakpoint(tablet) {
          @include omega();
        }
        @include breakpoint(large_tablet) {
          margin-right: flex-gutter(12);
        }
      }
      &:nth-child(3n) {
        @include breakpoint(large_tablet) {
          @include omega();
        }
      }
      .node {
        position: relative;
        padding-right: rem(11px);
        margin-bottom: rem(22px);
        padding-top: rem(16px);
        padding-bottom: rem(22px);
        padding-left: rem(35px);
        @include breakpoint(tablet) {
          padding-left: rem(11px);
        }
        @include breakpoint(large_tablet) {
          padding-left: rem(47px);
          padding-top: rem(38px);
          padding-bottom: rem(46px);
        }
        &:before {
          content: '';
          display: inline-block;
          position: absolute;
          width: 2px;
          top: 0;
          bottom: 0;
          left: 0;
          right: auto;
        }
      }
      h2 {
        @include listing-component-heading;
        margin-top: 0;
        font-family: $varela_round;
        font-size: rem(18px);
        @include breakpoint(large_tablet) {
          font-size: rem(24px);
        }
      }
      .field-name-body {
        color: #333333;
        letter-spacing: 0px;
        font-size: rem(14px);
        line-height: 1.2em;
        @include breakpoint(large_tablet) {
          font-size: rem(16px);
        }
      }
      .node-readmore {
        padding: 0;
        a {
          @include listing-component-button;
        }
      }
    }
  }
}

// =========================================================
// HOMEPAGE PARTNERS BLOCK
// =========================================================
.pane-partners {
  padding-top: rem(55px);
  padding-bottom: rem(43px);
  .pane-title {
    @include center-column($desktop_column);
    @include large-block-heading;
  }
}

.view-partners.view-display-id-home_block {
  @include center-column(370px);
  @include breakpoint(tablet) {
    @include center-column($desktop_column);
  }
  &:after {
    @include clearfix;
  }
  .view-content {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    .no-flexbox & {
      @include clearfix;
    }
    .views-row {
      margin: 0;
      margin-bottom: rem(30px);
      box-sizing: border-box;
      text-align: center;
      padding-left: rem(16px);
      padding-right: rem(16px);
      width: 33.33%;
      .no-flexbox & {
        display: inline-block;
        min-height: rem(130px);
        float: left;
      }
      @include breakpoint(tablet) {
        width: 20%;
        padding-left: rem(25px);
        padding-right: rem(25px);
      }
      @include breakpoint(desktop) {
        padding-left: rem(42px);
        padding-right: rem(42px);
      }
      &:first-child, &:nth-child(3n+1) {
        padding-left: 0;
      }
      &:nth-child(3n), &:last-child {
        padding-right: 0;
      }
      &:nth-child(3n+1), &:nth-child(3n) {
        @include breakpoint(tablet) {
          padding-left: rem(25px);
          padding-right: rem(25px);
        }
        @include breakpoint(desktop) {
          padding-left: rem(42px);
          padding-right: rem(42px);
        }
      }
      &:first-child, &:nth-child(5n+1) {
        @include breakpoint(tablet) {
          padding-left: 0;
        }
      }
      &:nth-child(5n), &:last-child {
        @include breakpoint(tablet) {
          padding-right: 0;
        }
      }
      a {
        display: inline-block;
        img {
          height: auto;
          width: auto;
          max-height: rem(100px);
          .no-flexbox & {
            width: 100%;
          }
        }
      }
    }
  }
}

